yoshimi 1.5.8 M

2018-8-12 Will
* Reorganised and combined XML & history types.
  History lists now identified by name.
* More 'type' and 'control' conversions in CLI.
* Small GUI updates/corrections.

2018-8-7 Will
* BugFix: Corrected wrong operator use.
  Was || when it should have been |
* Envelope limits done.

2018-8-6 Will
* Found more missing conversions :(

2018-8-5 Will
* Updated addSynth limits.
* Updated padsynth limits.
* Updated subSynth limits.
* Updated controller limits.
* Completed sys/ins control change.
  Envelope defaults still to do.

2018-8-4 Will
* BugFix: MIDI-learn Cancel.
  It was only pretending to :(
* Updated Microtonal.cpp limits.
* MicrotonalUI.fl converted to enums.
* Updated SynthEngine.cpp limits.
* MasterMiscUI.fl converted to enums.
* MasterUI.fl mostly converted to enums.
  Still some control values for MIDI,
  System and Insert effects to do.
* ConfigUI converted to enums.
* BankUI converted to enums.
* All MIDI controls now done.
  Effects still not complete.

2018-8-3 Will
* OscilGenUI.fl converted to enums.
* Completed limits in Synth/OscilGen.cpp
* PartUI.fl converted to enums.
* Some minor cleanups.
* VectorUI.fl converted to enums.
* Vector limits now same format as others.
* ResonanceUI.fl converted to enums.


2018-8-2 Will
* ADnoteUI.fl converted to enums.
* More clarifcations in MiscGui.cpp
  Also found more missing conversions :(
* SUBnoteUI.fl converted to enums.
* PADnoteUI.fl converted to enums.

2018-8-1 Will
* Partly implemented envelope limits.
  Not defaults.
* MIDI-learn test now using limits and
  not the GUI version.

2018-7-31 Will
* Implemented filter limits.
* Added MIDI-learn to filter limits.

2018-7-30 Will
* Implemented LFO limits.

2018-7-29 Will
* More work on Limits.
* Converted limits error checks.
* Updated limits doc.
* Improved encoding in UI/MiscGui.cpp
* More work on limits.
* Picked up a few more stragglers.

2018-7-28 Will
* Cleaned up some missing conversions.